Fix header horizontal overflow

--- a/components/header/index.css
+++ b/components/header/index.css
@@ -123,7 +123,7 @@
 @media (min-width: 1300px) {
   .Header-list {
     transform-origin: center right;
-    transform: scale(calc(1.2 - (0.2 * (1 - var(--Header-size)))));
+    transform: scale(calc(1.1 - (0.2 * (1 - var(--Header-size)))));
   }
 
   .Header-button--back {
